@@ -36,19 +36,28 @@ Reports:
   Callers and timing information for xsubs are now shown at the
     bottom of the corresponding source file.
   References to xsubs in reports now include a working link
-    if the xsub is in a package that contains perl code.
+    if the xsub is in a package that contains profiled perl code.
 
   The html global subroutine index pages no longer list subs that
     were never called.
 
   Assorted report formating enhancements thanks to Gisle Aas.
 
-  Added Devel::NYTProf::ReadStream module thanks to Gisle Aas.
-
   Exclusive and Inclusive time column positions have been switched
     to be consistent with how the times are presented elsewhere.
 
   nytprofhtml includes a --open option to open the generated html
+
+Documentation:
+
+  Greatly expanded description of the clocks used for profiling
+    and thier issues, especially on multi-processor systems.
+
+Other:
+
+  Added Devel::NYTProf::ReadStream module which provides a perl
+    interface for reading the raw profile data, thanks to Gisle Aas.
+
 
 =head2 Changes in Devel::NYTProf 2.05 (svn r498) 8th Oct 2008
 
